--- a/package.json
+++ b/package.json
@@ -5,20 +5,21 @@
 	"scripts": {
 		"build": "remix build",
 		"lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
-		"dev": "remix dev --manual -c \"npm start\"",
+		"dev": "remix dev --manual -c \"pnpm start\"",
 		"start": "wrangler dev ./build/index.js",
-		"prebuild": "npm run clean",
+		"prebuild": "pnpm run clean",
 		"clean": "del public/build && del build",
 		"ci-test": "CI=true run-p typecheck test",
 		"remove-sourcemaps": "del public/build/**/*.map",
-		"deploy": "npm run ci-test && npm run build -- --sourcemap && npm run remove-sourcemaps && wrangler publish --define __RELEASE__:\\\"$(git rev-parse --short HEAD)\\\" --define __SENTRY_DSN__:\\\"$SENTRY_DSN\\\"",
+		"deploy": "pnpm run ci-test && pnpm run build -- --sourcemap && pnpm run remove-sourcemaps && wrangler publish --define __RELEASE__:\\\"$(git rev-parse --short HEAD)\\\" --define __SENTRY_DSN__:\\\"$SENTRY_DSN\\\"",
 		"prettier": "prettier -w --ignore-path .gitignore .",
 		"typecheck": "tsc --noEmit --skipLibCheck",
-		"typecheck:watch": "npm run typecheck -- --watch",
+		"typecheck:watch": "pnpm run typecheck -- --watch",
 		"prepare": "husky install",
 		"test": "vitest"
 	},
 	"dependencies": {
+		"@cloudflare/kv-asset-handler": "^0.3.1",
 		"@heroicons/react": "^2.1.1",
 		"@mediapipe/selfie_segmentation": "^0.1.1675465747",
 		"@radix-ui/react-alert-dialog": "^1.0.5",
@@ -44,6 +45,7 @@
 		"react-dom": "^18.2.0",
 		"react-flip-toolkit": "^7.1.0",
 		"react-query": "^3.39.3",
+		"react-router": "^6.22.3",
 		"react-use": "^17.4.2",
 		"tailwind-merge": "^2.2.0",
 		"tiny-invariant": "^1.3.1",
@@ -54,6 +56,7 @@
 		"@peculiar/webcrypto": "^1.4.3",
 		"@remix-run/dev": "2.4.1",
 		"@remix-run/eslint-config": "2.4.1",
+		"@types/cookie": "^0.6.0",
 		"@types/react": "^18.2.45",
 		"@types/react-dom": "^18.2.18",
 		"del-cli": "^5.1.0",
@@ -61,11 +64,11 @@
 		"git-format-staged": "^3.0.0",
 		"husky": "^8.0.3",
 		"msw": "^2.0.11",
-		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.1",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"tailwindcss": "^3.4.0",
 		"typescript": "^5.3.3",
+		"vite": "^5.2.8",
 		"vitest": "^1.1.0",
 		"wrangler": "^3.22.1"
 	},
