--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"clean": "del public/build && del build",
 		"ci-test": "CI=true run-p typecheck test",
 		"remove-sourcemaps": "del public/build/**/*.map",
-		"deploy": "pnpm run ci-test && pnpm run build -- --sourcemap && pnpm run remove-sourcemaps && wrangler publish --define __RELEASE__:\\\"$(git rev-parse --short HEAD)\\\" --define __SENTRY_DSN__:\\\"$SENTRY_DSN\\\"",
+		"deploy": "pnpm run ci-test && npm run build -- --sourcemap && pnpm run remove-sourcemaps && wrangler publish --define __RELEASE__:\\\"$(git rev-parse --short HEAD)\\\" --define __SENTRY_DSN__:\\\"$SENTRY_DSN\\\"",
 		"prettier": "prettier -w --ignore-path .gitignore .",
 		"typecheck": "tsc --noEmit --skipLibCheck",
 		"typecheck:watch": "pnpm run typecheck -- --watch",
@@ -64,6 +64,7 @@
 		"git-format-staged": "^3.0.0",
 		"husky": "^8.0.3",
 		"msw": "^2.0.11",
+		"npm-run-all": "^4.1.5",
 		"prettier": "^3.1.1",
 		"prettier-plugin-organize-imports": "^3.2.4",
 		"tailwindcss": "^3.4.0",
